chore: fix dark mode in code components

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1426,7 +1426,8 @@ article strong em > code {
 
 .codeBlockLines_node_modules-\@docusaurus-theme-classic-lib-theme-CodeBlock-Content-styles-module,
 .theme-code-block code {
-  background-color: var(--ifm-navbar-search-bg) !important;
+  /*background-color: var(--ifm-navbar-search-bg) !important;*/
+  background-color: var(--ifm-playground-header-terminalbg) !important;
   font-family: 'Fira Code' !important;
 }
 
